api/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-3tier-app2-api
  labels:
    app: node-3tier-app2-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: node-3tier-app2-api
